[package]
name = "hello_fltk_rs"
version = "0.1.0"
edition = "2018"
authors = ["Coby Tamayo <coby@tamayo.email"]
keywords = ["audio", "sound"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1"
anyhow = "1.0.12"
cpal = "0.13.3"
ringbuf = "0.2"
hound = "3.4"
